Fix spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -41,10 +41,13 @@ body {
   background: $grey-100;
   margin: 2rem;
   font-family: 'Libre Baskerville', serif;
-
   line-height: 1.7;
   color: $grey-700;
+}
 
+.page-content {
+  max-width: 1200px;
+  margin: auto;
 }
 
 .header--wrapper {
@@ -73,7 +76,7 @@ body {
   justify-content: center;
   flex-direction: column;
   display: flex;
-  padding-right: $spacing-500;
+  padding-right: $spacing-700;
   padding-left: $spacing-500;
   margin-top: $spacing-500;
 
@@ -287,8 +290,6 @@ body {
 
 .post-wrapper {
   background: $white;
-  max-width: 1200px;
-  margin: auto;
   border-radius: $spacing-300;
 }
 
